Amélioration de la gestion des ressources et de la compilation Maven. Ajout des scripts de build et d'exécution. Mise à jour du README avec les instructions d'installation et d'exécution.